erDiagram
  TEAMS ||--o{ PROJECTS : owns
  USERS ||--o{ PROJECTS : creates
  PROJECTS ||--o{ PROJECT_MEMBERS : has
  USERS ||--o{ PROJECT_MEMBERS : joins

  PROJECTS ||--o{ DOCUMENTS : contains
  USERS ||--o{ DOCUMENTS : uploads
  DOCUMENTS ||--o{ DOCUMENT_CHUNKS : splits
  PROJECTS ||--o{ DOCUMENT_CHUNKS : scopes
  DOCUMENT_CHUNKS ||--o{ CHUNK_EMBEDDINGS : indexes

  DOCUMENTS ||--o{ ANALYSIS_JOBS : analyzed_by
  ANALYSIS_JOBS ||--o{ ANALYSIS_STEPS : tracks
  ANALYSIS_JOBS ||--o{ AI_EXTRACTIONS : produces
  DOCUMENTS ||--o{ AI_EXTRACTIONS : supports
  DOCUMENT_CHUNKS ||--o{ AI_EXTRACTIONS : cites

  PROJECTS ||--o{ TODOS : tracks
  USERS ||--o{ TODOS : assigned
  USERS ||--o{ TODOS : creates
  DOCUMENTS ||--o{ TODOS : sources
  DOCUMENT_CHUNKS ||--o{ TODOS : cites
  AI_EXTRACTIONS ||--o{ TODOS : proposes

  PROJECTS ||--o{ ISSUES : logs
  USERS ||--o{ ISSUES : assigned
  DOCUMENTS ||--o{ ISSUES : sources
  DOCUMENT_CHUNKS ||--o{ ISSUES : cites
  AI_EXTRACTIONS ||--o{ ISSUES : proposes
  ISSUES ||--o{ ISSUE_STATUS_HISTORY : changes
  TODOS }o--o| ISSUES : linked_to

  PROJECTS ||--o{ PROJECT_EVENTS : schedules
  USERS ||--o{ PROJECT_EVENTS : creates
  PROJECTS ||--o{ RISK_WINDOWS : predicts
  RISK_WINDOWS }o--o| TODOS : related_todo
  RISK_WINDOWS }o--o| ISSUES : related_issue

  PROJECTS ||--o{ PROJECT_REPORTS : has
  USERS ||--o{ PROJECT_REPORTS : writes

  PROJECTS ||--o{ HANDOFF_REPORTS : has
  HANDOFF_REPORTS ||--o{ HANDOFF_ITEMS : contains
  HANDOFF_ITEMS }o--o| TODOS : related_todo
  HANDOFF_ITEMS }o--o| ISSUES : related_issue
  HANDOFF_ITEMS }o--o| DOCUMENTS : related_document

  PROJECTS ||--o{ CHAT_SESSIONS : has
  USERS ||--o{ CHAT_SESSIONS : starts
  CHAT_SESSIONS ||--o{ CHAT_MESSAGES : contains
  USERS ||--o{ CHAT_MESSAGES : sends
  CHAT_MESSAGES ||--o{ CHAT_MESSAGE_SOURCES : cites
  DOCUMENTS ||--o{ CHAT_MESSAGE_SOURCES : cited_by
  DOCUMENT_CHUNKS ||--o{ CHAT_MESSAGE_SOURCES : cited_by

  PROJECTS ||--o{ PROJECT_ACTIVITY_LOGS : records
  USERS ||--o{ PROJECT_ACTIVITY_LOGS : acts

  USERS {
    uuid id PK
    string name
    string email UK
    string password_hash
    string role
    timestamp created_at
    timestamp updated_at
  }

  TEAMS {
    uuid id PK
    string name
    timestamp created_at
    timestamp updated_at
  }

  PROJECTS {
    uuid id PK
    uuid team_id FK
    uuid created_by FK
    string name
    text description
    string status
    date start_date
    date end_date
    timestamp created_at
    timestamp updated_at
  }

  PROJECT_MEMBERS {
    uuid id PK
    uuid project_id FK
    uuid user_id FK
    string role
    timestamp joined_at
  }

  DOCUMENTS {
    uuid id PK
    uuid project_id FK
    uuid uploaded_by FK
    string file_name
    string file_type
    string source_type
    string storage_path
    string status
    timestamp uploaded_at
    timestamp created_at
    timestamp updated_at
  }

  DOCUMENT_CHUNKS {
    uuid id PK
    uuid document_id FK
    uuid project_id FK
    text content
    int chunk_index
    int page_number
    timestamp created_at
  }

  CHUNK_EMBEDDINGS {
    uuid id PK
    uuid chunk_id FK
    string faiss_index_path
    int faiss_index_id
    string embedding_model
    timestamp created_at
  }

  ANALYSIS_JOBS {
    uuid id PK
    uuid project_id FK
    uuid document_id FK
    uuid requested_by FK
    string status
    int progress_percent
    timestamp started_at
    timestamp completed_at
    timestamp created_at
    timestamp updated_at
  }

  ANALYSIS_STEPS {
    uuid id PK
    uuid analysis_job_id FK
    string step_name
    string status
    int step_order
    text message
    timestamp started_at
    timestamp completed_at
  }

  AI_EXTRACTIONS {
    uuid id PK
    uuid analysis_job_id FK
    uuid project_id FK
    uuid document_id FK
    uuid source_chunk_id FK
    string extraction_type
    text title
    text body
    int confidence_score
    string status
    jsonb extracted_json
    timestamp created_at
  }

  TODOS {
    uuid id PK
    uuid project_id FK
    uuid assignee_id FK
    uuid created_by FK
    uuid source_document_id FK
    uuid source_chunk_id FK
    uuid source_extraction_id FK
    uuid linked_issue_id FK
    string title
    text description
    string status
    string priority
    string source_type
    string approval_status
    int confidence_score
    uuid reviewed_by FK
    timestamp reviewed_at
    timestamp due_date
    timestamp created_at
    timestamp updated_at
  }

  ISSUES {
    uuid id PK
    uuid project_id FK
    uuid reporter_id FK
    uuid assignee_id FK
    uuid source_document_id FK
    uuid source_chunk_id FK
    uuid source_extraction_id FK
    string title
    text description
    string severity
    string status
    string source_type
    int confidence_score
    boolean is_candidate
    timestamp detected_at
    timestamp created_at
    timestamp updated_at
  }

  ISSUE_STATUS_HISTORY {
    uuid id PK
    uuid issue_id FK
    uuid changed_by FK
    string from_status
    string to_status
    text note
    timestamp changed_at
  }

  PROJECT_EVENTS {
    uuid id PK
    uuid project_id FK
    uuid created_by FK
    string title
    string event_type
    string risk_level
    timestamp start_at
    timestamp end_at
    text description
    timestamp created_at
    timestamp updated_at
  }

  RISK_WINDOWS {
    uuid id PK
    uuid project_id FK
    uuid related_todo_id FK
    uuid related_issue_id FK
    string title
    string risk_level
    date start_date
    date end_date
    text reason
    int confidence_score
    timestamp created_at
  }

  PROJECT_REPORTS {
    uuid id PK
    uuid project_id FK
    uuid created_by FK
    string report_type
    string title
    text content
    string status
    int version
    int progress_rate
    timestamp period_start
    timestamp period_end
    timestamp created_at
    timestamp updated_at
  }

  HANDOFF_REPORTS {
    uuid id PK
    uuid project_id FK
    uuid created_by FK
    string title
    text summary
    int handoff_score
    timestamp created_at
    timestamp updated_at
  }

  HANDOFF_ITEMS {
    uuid id PK
    uuid handoff_report_id FK
    uuid related_todo_id FK
    uuid related_issue_id FK
    uuid related_document_id FK
    string item_type
    string title
    text body
    string priority
    string status
    timestamp created_at
  }

  CHAT_SESSIONS {
    uuid id PK
    uuid project_id FK
    uuid user_id FK
    string title
    timestamp created_at
    timestamp updated_at
  }

  CHAT_MESSAGES {
    uuid id PK
    uuid chat_session_id FK
    uuid user_id FK
    string role
    text content
    timestamp created_at
  }

  CHAT_MESSAGE_SOURCES {
    uuid id PK
    uuid chat_message_id FK
    uuid document_id FK
    uuid chunk_id FK
    string source_label
    int page_number
    timestamp created_at
  }

  PROJECT_ACTIVITY_LOGS {
    uuid id PK
    uuid project_id FK
    uuid actor_id FK
    string activity_type
    string title
    text body
    jsonb metadata
    timestamp created_at
  }

